--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -2,9 +2,17 @@
 <div class="roomListRoom">
   <div class="roomListRoom__header">
     <a href="{% url 'user-profile' room.host.id %}" class="roomListRoom__author">
-      <div class="avatar avatar--small active">
-        <img src="{{room.host.avatar.url}}" />
-      </div>
+      
+    {% if room.host.is_online %}
+    <div class="avatar avatar--small active">
+      <img src="{{room.host.avatar.url}}" />
+    </div>
+    {% else %}
+    <div class="avatar avatar--small">
+      <img src="{{room.host.avatar.url}}" />
+    </div>
+    {% endif %}
+          
       <span>@{{room.host.username}}</span>
     </a>
     <div class="roomListRoom__actions">
