--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -9,9 +9,19 @@
       <div class="roomList">
         <div class="profile">
           <div class="profile__avatar">
+
+
+            {% if user.is_online %}
             <div class="avatar avatar--large active">
               <img src="{{user.avatar.url}}" />
             </div>
+            {% else %}
+            <div class="avatar avatar--large">
+              <img src="{{user.avatar.url}}" />
+            </div>
+            {% endif %}
+
+            
           </div>
           <div class="profile__info">
             <h3>{{user.username}}</h3>
