--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -66,9 +66,26 @@
               <div class="room__hosted">
                 <p>Hosted By</p>
                 <a href="{% url 'user-profile' room.host.id %}" class="room__author">
+
+
+                  
+
+                  {% if room.host.is_online %}
+                  <div class="avatar avatar--small active">
+                    <img src="{{room.host.avatar.url}}" />
+                  </div>
+                  {% else %}
                   <div class="avatar avatar--small">
                     <img src="{{room.host.avatar.url}}" />
                   </div>
+                  {% endif %}
+
+                  <!-- <div class="avatar avatar--small">
+                    <img src="{{room.host.avatar.url}}" />
+                  </div> -->
+
+
+                  
                   <span>@{{room.host.username}}</span>
                 </a>
               </div>
