--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -5,7 +5,7 @@
       <img src="{% static 'images/hotdog.svg' %}" />
       <h1>:hotdog:</h1>
     </a>
-    <form class="header__search" method="GET" "{% url 'home' %}">
+    <form class="header__search" method="GET" action = "{% url 'home' %}">
       <label>
         <svg
           version="1.1"
