--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -6,14 +6,33 @@
     <div class="activities__box">
       <div class="activities__boxHeader roomListRoom__header">
         <a href="{% url 'user-profile' message.user.id %}" class="roomListRoom__author">
-          <div class="avatar avatar--small">
+          
+
+
+          
+          {% if message.user.is_online %}
+ 
+          <div class="avatar avatar--small active">
             <img src="{{message.user.avatar.url}}" />
           </div>
+    
+          {% else %}
+            <div class="avatar avatar--small ">
+              <img src="{{message.user.avatar.url}}" />
+            </div>
+  
+          {% endif %}   
+
+         
           <p>
             @{{message.user.username}}
             <span>{{message.created|timesince}} ago</span>
           </p>
         </a>
+
+
+
+
         {% if request.user == message.user %}
         <div class="roomListRoom__actions">
           <a href="#">
