--- a/base/templates/base/topics_component.html
+++ b/base/templates/base/topics_component.html
@@ -1,6 +1,6 @@
 <div class="topics">
         <div class="topics__header">
-          <h2>Browse Topics</h2>
+          <h2>Browse Topicss</h2>
         </div>
         <ul class="topics__list">
           <li>
@@ -8,7 +8,11 @@
           </li>
           {% for topic in topics %}
           <li>
-            <a href="{% url 'home' %}?q={{topic.name}}" >{{topic.name}} <span>{{topic.room_set.all.count}}</span></a>
+            {% if topic.is_active %}
+            <a  id = "topic_active" href="{% url 'home' %}?q={{topic.name}}" >{{topic.name}} <span>{{topic.room_set.all.count}}</span></a>
+            {% else %}
+            <a href="{% url 'home' %}?q={{topic.name}}" >{{topic}} <span>{{topic.room_set.all.count}}</span></a> 
+            {% endif %}   
           </li>
           {% endfor %}
         </ul>
