--- a/base/templates/base/topics.html
+++ b/base/templates/base/topics.html
@@ -12,7 +12,7 @@
                   ></path>
                 </svg>
               </a>
-              <h3>Browse Topics</h3>
+              <h3>Topic Page</h3>
             </div>
           </div>
 
